Fix about.html layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -390,3 +390,7 @@ height: auto;
 .navtoggle.responsive li  {
   display: block;
 }
+
+.interests {
+  list-style: disc;
+}
